ido-tth/main/default/objects/tth_Baggage__c/tth_Baggage__c.object-meta.xml
<CustomObject>
    <description>For the TTH IDO data model, represents any type of baggage owned by the traveler on a particular trip</description>
    <label>Baggage</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Baggage Tag</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baggage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>