ido-tth/main/default/objects/tth_Baggage__c/fields/tth_Color__c.field-meta.xml
<CustomField>
    <fullName>tth_Color__c</fullName>
    <description>What color is the baggage?</description>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Baggage_Color</valueSetName>
    </valueSet>
</CustomField>