ido-tth/main/default/objects/tth_Baggage__c/fields/tth_Size__c.field-meta.xml
<CustomField>
    <fullName>tth_Size__c</fullName>
    <description>What size is the baggage?</description>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Baggage_Size</valueSetName>
    </valueSet>
</CustomField>