ido-tth/main/default/objects/tth_Baggage__c/fields/tth_Status__c.field-meta.xml
<CustomField>
    <fullName>tth_Status__c</fullName>
    <description>What is the current status of the baggage</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Baggage_Status</valueSetName>
    </valueSet>
</CustomField>