ido-tth/main/default/objects/tth_Baggage__c/fields/tth_Traveller__c.field-meta.xml
<CustomField>
    <fullName>tth_Traveller__c</fullName>
    <description>Which traveller on the trip does this baggage belong to?</description>
    <label>Traveller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Baggage</relationshipLabel>
    <relationshipName>Baggage</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>