ido-tth/main/default/objects/tth_Baggage__c/fields/tth_Trip__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip__c</fullName>
    <description>Which trip is this baggage associated to?</description>
    <label>Trip</label>
    <referenceTo>tth_Trip__c</referenceTo>
    <relationshipLabel>Baggage</relationshipLabel>
    <relationshipName>Baggage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>