ido-tth/main/default/objects/tth_Baggage__c/fields/tth_Type__c.field-meta.xml
<CustomField>
    <fullName>tth_Type__c</fullName>
    <description>What type of baggage is this?</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Baggage_Type</valueSetName>
    </valueSet>
</CustomField>